chore(deps): Update vaadin.version to v25.1.6